--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -4,11 +4,11 @@
     <div class="navbar-logo">
         <a href="{{ url_for('homepage') }}">
 <!--            <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">-->
-            <span class="material-symbols-outlined">eco</span>
+            <span class="material-symbols-outlined"></span>
         </a>
     </div>
     <ul class="navbar-links">
-        <li><a href="{{ url_for('homepage') }}"><span class="material-symbols-outlined">flood</span></a></li>
+        <li><a href="{{ url_for('homepage') }}"><span class="material-symbols-outlined">house</span></a></li>
         {% if current_user.is_authenticated %}
             <li><a href="{{ url_for('profile', user_id=current_user.id) }}">Meu Perfil</a></li>
         {% else %}
